currently testing model

--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "a5136d6d",
    "metadata": {},
    "outputs": [
@@ -53,14 +53,14 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models\n",
     "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
-    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "import matplotlib.pyplot as plt\n",
     "print(tf.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "1f76431b",
    "metadata": {},
    "outputs": [],
@@ -87,37 +87,89 @@
     "    \n",
     "    return np.array(images), np.array(all_labels)\n",
     "\n",
+    "def augment_data():\n",
+    "    # who would have thought: https://keras.io/api/layers/preprocessing_layers/image_augmentation/\n",
+    "    return tf.keras.Sequential([\n",
+    "        layers.RandomRotation(0.2),\n",
+    "        layers.RandomFlip(\"horizontal\"),\n",
+    "        layers.RandomFlip(\"vertical\"),\n",
+    "        layers.RandomZoom(0.2),\n",
+    "        layers.RandomBrightness(0.2),\n",
+    "        layers.RandomContrast(0.2),\n",
+    "    ])\n",
     "\n",
+    "# old model 81%\n",
     "def build_model():\n",
     "\n",
     "    # random bs\n",
     "    model = models.Sequential([\n",
     "        \n",
-    "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=(224, 224, 3)),\n",
+    "       layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "               padding='same', input_shape=(224, 224, 3)),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.MaxPooling2D((2, 2)),\n",
-    "        \n",
-    "        \n",
-    "        layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.MaxPooling2D((2, 2)),\n",
-    "        \n",
-    "        \n",
-    "        layers.Conv2D(128, (3, 3), activation='relu'),\n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
+    "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.MaxPooling2D((2, 2)),\n",
-    "        \n",
-    "        \n",
-    "        layers.Conv2D(256, (3, 3), activation='relu'),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.MaxPooling2D((2, 2)),\n",
-    "        \n",
-    "        \n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
     "        layers.Flatten(),\n",
-    "        layers.Dropout(0.5),\n",
-    "        layers.Dense(512, activation='relu'),\n",
+    "        layers.Dense(256, activation='relu'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.Dropout(0.5),\n",
+    "        \n",
+    "        # sigmoid here\n",
+    "        layers.Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "def oversample_model():\n",
+    "    model = models.Sequential([\n",
+    "        \n",
+    "        augment_data(),\n",
+    "        \n",
+    "        layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "               padding='same', input_shape=(224, 224, 1)),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
+    "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Dropout(0.25),\n",
+    "\n",
+    "        layers.Flatten(),\n",
+    "        layers.Dense(256, activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Dropout(0.5),\n",
+    "        \n",
+    "        # sigmoid here\n",
     "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
     "    \n",
@@ -126,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "552f9f5b",
    "metadata": {},
    "outputs": [],
@@ -138,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "1f9bb842",
    "metadata": {},
    "outputs": [
@@ -187,33 +239,29 @@
      "text": [
       "Starting training...\n",
       "Epoch 1/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m265s\u001b[0m 1s/step - accuracy: 0.6058 - auc_1: 0.6471 - loss: 0.9412 - val_accuracy: 0.5003 - val_auc_1: 0.5637 - val_loss: 1.0364\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m513s\u001b[0m 2s/step - accuracy: 0.6274 - auc_6: 0.6637 - loss: 0.8561 - precision_6: 0.6294 - recall_6: 0.6189 - val_accuracy: 0.5091 - val_auc_6: 0.6423 - val_loss: 1.6060 - val_precision_6: 0.7857 - val_recall_6: 0.0243 - learning_rate: 0.0010\n",
       "Epoch 2/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m237s\u001b[0m 1s/step - accuracy: 0.6598 - auc_1: 0.7136 - loss: 0.6585 - val_accuracy: 0.5832 - val_auc_1: 0.7360 - val_loss: 0.7525\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m531s\u001b[0m 2s/step - accuracy: 0.6615 - auc_6: 0.7122 - loss: 0.6631 - precision_6: 0.6635 - recall_6: 0.6769 - val_accuracy: 0.5130 - val_auc_6: 0.6695 - val_loss: 0.9039 - val_precision_6: 0.9600 - val_recall_6: 0.0265 - learning_rate: 0.0010\n",
       "Epoch 3/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m229s\u001b[0m 1s/step - accuracy: 0.6792 - auc_1: 0.7485 - loss: 0.6090 - val_accuracy: 0.6175 - val_auc_1: 0.7505 - val_loss: 0.7260\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m547s\u001b[0m 2s/step - accuracy: 0.6777 - auc_6: 0.7387 - loss: 0.6176 - precision_6: 0.6897 - recall_6: 0.6635 - val_accuracy: 0.6606 - val_auc_6: 0.7542 - val_loss: 0.6114 - val_precision_6: 0.6202 - val_recall_6: 0.8274 - learning_rate: 0.0010\n",
       "Epoch 4/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m220s\u001b[0m 968ms/step - accuracy: 0.6969 - auc_1: 0.7609 - loss: 0.5888 - val_accuracy: 0.6733 - val_auc_1: 0.7572 - val_loss: 0.6084\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m542s\u001b[0m 2s/step - accuracy: 0.6893 - auc_6: 0.7677 - loss: 0.5779 - precision_6: 0.6945 - recall_6: 0.6915 - val_accuracy: 0.5086 - val_auc_6: 0.5963 - val_loss: 1.0258 - val_precision_6: 0.5042 - val_recall_6: 0.9945 - learning_rate: 0.0010\n",
       "Epoch 5/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m200s\u001b[0m 882ms/step - accuracy: 0.7207 - auc_1: 0.7925 - loss: 0.5541 - val_accuracy: 0.5064 - val_auc_1: 0.6564 - val_loss: 1.2606\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m548s\u001b[0m 2s/step - accuracy: 0.6820 - auc_6: 0.7473 - loss: 0.5993 - precision_6: 0.6825 - recall_6: 0.6775 - val_accuracy: 0.6346 - val_auc_6: 0.7519 - val_loss: 0.6257 - val_precision_6: 0.5867 - val_recall_6: 0.9093 - learning_rate: 0.0010\n",
       "Epoch 6/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m239s\u001b[0m 1s/step - accuracy: 0.6945 - auc_1: 0.7591 - loss: 0.5876 - val_accuracy: 0.6197 - val_auc_1: 0.7169 - val_loss: 0.7925\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m796s\u001b[0m 4s/step - accuracy: 0.7314 - auc_6: 0.8032 - loss: 0.5404 - precision_6: 0.7360 - recall_6: 0.7220 - val_accuracy: 0.6761 - val_auc_6: 0.7391 - val_loss: 0.6623 - val_precision_6: 0.7524 - val_recall_6: 0.5243 - learning_rate: 0.0010\n",
       "Epoch 7/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m241s\u001b[0m 1s/step - accuracy: 0.6988 - auc_1: 0.7715 - loss: 0.5708 - val_accuracy: 0.6423 - val_auc_1: 0.7415 - val_loss: 0.6434\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m797s\u001b[0m 4s/step - accuracy: 0.7252 - auc_6: 0.8027 - loss: 0.5381 - precision_6: 0.7124 - recall_6: 0.7331 - val_accuracy: 0.7004 - val_auc_6: 0.7806 - val_loss: 0.5758 - val_precision_6: 0.7631 - val_recall_6: 0.5808 - learning_rate: 0.0010\n",
       "Epoch 8/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m210s\u001b[0m 921ms/step - accuracy: 0.7271 - auc_1: 0.8009 - loss: 0.5407 - val_accuracy: 0.5047 - val_auc_1: 0.6734 - val_loss: 1.0002\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m617s\u001b[0m 3s/step - accuracy: 0.7388 - auc_6: 0.8128 - loss: 0.5271 - precision_6: 0.7430 - recall_6: 0.7413 - val_accuracy: 0.6650 - val_auc_6: 0.7473 - val_loss: 0.5887 - val_precision_6: 0.6717 - val_recall_6: 0.6449 - learning_rate: 0.0010\n",
       "Epoch 9/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m244s\u001b[0m 1s/step - accuracy: 0.7211 - auc_1: 0.7964 - loss: 0.5458 - val_accuracy: 0.6965 - val_auc_1: 0.7638 - val_loss: 0.5731\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m589s\u001b[0m 3s/step - accuracy: 0.7387 - auc_6: 0.8235 - loss: 0.5138 - precision_6: 0.7421 - recall_6: 0.7278 - val_accuracy: 0.5744 - val_auc_6: 0.6641 - val_loss: 0.7778 - val_precision_6: 0.5482 - val_recall_6: 0.8429 - learning_rate: 0.0010\n",
       "Epoch 10/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m243s\u001b[0m 1s/step - accuracy: 0.7489 - auc_1: 0.8276 - loss: 0.5103 - val_accuracy: 0.6915 - val_auc_1: 0.7698 - val_loss: 0.6205\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m593s\u001b[0m 3s/step - accuracy: 0.7140 - auc_6: 0.7848 - loss: 0.5564 - precision_6: 0.7253 - recall_6: 0.7028 - val_accuracy: 0.6788 - val_auc_6: 0.7742 - val_loss: 0.5841 - val_precision_6: 0.7889 - val_recall_6: 0.4878 - learning_rate: 0.0010\n",
       "Epoch 11/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m199s\u001b[0m 877ms/step - accuracy: 0.7430 - auc_1: 0.8334 - loss: 0.5007 - val_accuracy: 0.6374 - val_auc_1: 0.7167 - val_loss: 0.6418\n",
+      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m580s\u001b[0m 3s/step - accuracy: 0.7640 - auc_6: 0.8419 - loss: 0.4933 - precision_6: 0.7741 - recall_6: 0.7556 - val_accuracy: 0.4997 - val_auc_6: 0.6328 - val_loss: 2.0030 - val_precision_6: 0.4997 - val_recall_6: 1.0000 - learning_rate: 0.0010\n",
       "Epoch 12/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m237s\u001b[0m 1s/step - accuracy: 0.7595 - auc_1: 0.8302 - loss: 0.5095 - val_accuracy: 0.6711 - val_auc_1: 0.7509 - val_loss: 0.6035\n",
-      "Epoch 13/50\n",
-      "\u001b[1m227/227\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1805s\u001b[0m 8s/step - accuracy: 0.7600 - auc_1: 0.8426 - loss: 0.4909 - val_accuracy: 0.5113 - val_auc_1: 0.7146 - val_loss: 0.9135\n",
-      "Epoch 14/50\n",
-      "\u001b[1m128/227\u001b[0m \u001b[32m━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━\u001b[0m \u001b[1m1:53\u001b[0m 1s/step - accuracy: 0.7406 - auc_1: 0.8269 - loss: 0.5082"
+      "\u001b[1m 44/227\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m8:11\u001b[0m 3s/step - accuracy: 0.7691 - auc_6: 0.8491 - loss: 0.4813 - precision_6: 0.7914 - recall_6: 0.7575"
      ]
     }
    ],
@@ -226,44 +274,60 @@
     "\n",
     "model = build_model()\n",
     "\n",
+    "\n",
+    "total = len(y_train)\n",
+    "pos_weight = (total / (2 * np.sum(y_train)))\n",
+    "neg_weight = (total / (2 * (total - np.sum(y_train))))\n",
+    "class_imbal = {0: neg_weight, 1: pos_weight}\n",
+    "\n",
     "model.compile(\n",
     "    optimizer='adam',\n",
     "    loss='binary_crossentropy',\n",
-    "    metrics=['accuracy', tf.keras.metrics.AUC()]\n",
+    "    metrics=['accuracy', \n",
+    "                tf.keras.metrics.AUC(),\n",
+    "                tf.keras.metrics.Precision(),\n",
+    "                tf.keras.metrics.Recall()]\n",
     ")\n",
     "\n",
     "# Callbacks\n",
     "early_stopping = EarlyStopping(\n",
     "    monitor='val_loss',\n",
-    "    patience=10,\n",
+    "    patience=15,\n",
     "    restore_best_weights=True\n",
     ")\n",
     "\n",
+    "reduce_lr = ReduceLROnPlateau(\n",
+    "    monitor='val_loss',\n",
+    "    factor=0.2,\n",
+    "    patience=5,\n",
+    "    min_lr=1e-6\n",
+    ")\n",
     "\n",
     "# Train the model\n",
     "print(\"Starting training...\")\n",
-    "history = model.fit(\n",
+    "modeling = model.fit(\n",
     "    X_train, y_train,\n",
-    "    batch_size=32,\n",
+    "    batch_size=BATCH_SIZE,\n",
     "    epochs=EPOCHS,\n",
     "    validation_data=(X_testing, y_testing),\n",
-    "    callbacks=[early_stopping]\n",
+    "    callbacks=[early_stopping, reduce_lr],\n",
+    "    class_weight=class_imbal,\n",
     ")\n",
     "\n",
     "# Plot training history\n",
     "plt.figure(figsize=(12, 4))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(history.history['loss'], label='Training Loss')\n",
-    "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "plt.plot(modeling.history['loss'], label='Training Loss')\n",
+    "plt.plot(modeling.history['val_loss'], label='Validation Loss')\n",
     "plt.title('Model Loss')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
-    "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+    "plt.plot(modeling.history['accuracy'], label='Training Accuracy')\n",
+    "plt.plot(modeling.history['val_accuracy'], label='Validation Accuracy')\n",
     "plt.title('Model Accuracy')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Accuracy')\n",
