--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Current Issues:\n",
-    "# 1. Add oversampling to augmentation\n",
-    "# 2. Add a combination of both oversampling and undersampling\n",
-    "# 3. Figure out some more preprocessing techniques/augmented images (if possible, if not then oh well)\n",
-    "# 4. Start creating the model and training it\n",
-    "# 5. Sleep"
+    "\n",
+    "# 2. Add a combination of both oversampling and undersampling (WIP)\n",
+    "\n",
+    "# 4. Start creating the model and training it (WIP) current accuracy: 81\n",
+    "# 5. Sleep "
    ]
   },
   {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,6 +430,7 @@
     "\n",
     "    # print(df_ordered[df_ordered[\"MEL\"] == 0].shape[0])\n",
     "    # print(df_ordered[df_ordered[\"MEL\"] == 1].shape[0])\n",
+    "         \n",
     "\n",
     "    df_ordered.to_csv(new_labels_path, index=False)\n",
     "    #print(len(df_ordered))\n",
@@ -440,11 +441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "'''COMBO OF OVERSAMPLING AND UNDERSAMPLING'''\n",
     "def data_augmentation():\n",
     "    transformation = A.Compose([\n",
     "        A.RandomRotate90(p=0.5),\n",
@@ -507,7 +508,8 @@
     "            \n",
     "            cv2.imwrite(aug_path, aug_img)\n",
     "\n",
-    "# augment_data(\"../preprocessed_images\", \"../augmented_images\", num_augmentations=3)"
+    "# augment_data(\"../preprocessed_images\", \"../augmented_images\", num_augmentations=3)\n",
+    "\n"
    ]
   }
  ],
