Update labeling to be only melanoma and non-melanoma

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -148,15 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cf0c535d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Updating Labeling: Melanoma (1) vs. Non-Melanoma (0)\n",
-    "def update_labels(data_frame: pd.DataFrame) -> pd.DataFrame:\n",
-    "    pass\n",
-    "\n",
     "def augment_data(output_folder: str, transform_func, data_frame: pd.DataFrame) -> None:\n",
     "    \"\"\"\n",
     "    Augment images with MEL = 1 to create a new balanced dataset.\n",
@@ -459,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b38debea",
    "metadata": {},
    "outputs": [
@@ -471,6 +467,14 @@
       "Applying data augmentation to balance the dataset...\n",
       "\n",
       "Augmentation and balancing complete. Balanced DataFrame saved to ../preprocessed_dataset/ISIC_2019_Training_Balanced.csv.\n",
+      "\n",
+      "Balanced dataset preview:\n",
+      "   Unnamed: 0           image  MEL   NV  BCC   AK  BKL   DF  VASC  SCC  UNK\n",
+      "0           0    ISIC_0000000  0.0  1.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "1           1    ISIC_0000001  0.0  1.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "2           2    ISIC_0000002  1.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "3           2  ISIC_0000002_1  1.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "4           2  ISIC_0000002_2  1.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
       "\n",
       "Melanoma images: 18088\n",
       "Non-Melanoma images: 20809\n",
@@ -490,9 +494,56 @@
     "    A.RandomBrightnessContrast(p=0.2)\n",
     "])\n",
     "print(\"\\nApplying data augmentation to balance the dataset...\")\n",
-    "augment_data(output_folder, transform, df)\n",
-    "\n",
+    "augment_data(output_folder, transform, df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7986e94d",
+   "metadata": {},
+   "source": [
+    "#### Preview Augmented Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "efe33066",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated CSV saved to ../preprocessed_dataset/ISIC_2019_Training_Balanced.csv\n",
+      "\n",
+      "Balanced dataset preview:\n",
+      "            image  MEL\n",
+      "0    ISIC_0000000  0.0\n",
+      "1    ISIC_0000001  0.0\n",
+      "2    ISIC_0000002  1.0\n",
+      "3  ISIC_0000002_1  1.0\n",
+      "4  ISIC_0000002_2  1.0\n",
+      "\n",
+      "Melanoma images: 18088\n",
+      "Non-Melanoma images: 20809\n",
+      "\n",
+      "MEL column class distribution (%):\n",
+      "MEL\n",
+      "0.0    53.497699\n",
+      "1.0    46.502301\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
     "df_balanced = pd.read_csv(balanced_csv_path)\n",
+    "df_balanced = df_balanced[['image', 'MEL']]\n",
+    "df_balanced.to_csv(balanced_csv_path, index=True)\n",
+    "print(f\"Updated CSV saved to {balanced_csv_path}\")\n",
+    "\n",
+    "print(\"\\nBalanced dataset preview:\")\n",
+    "print(df_balanced.head())\n",
     "num_melanoma(df_balanced)  # Display the number of melanoma vs non-melanoma images"
    ]
   },
