--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -27374,7 +27374,7 @@
     "        os.makedirs(output_dir)\n",
     "    \n",
     "    i = 0\n",
-    "    for image_name in range(len(image_list)): # <--------------------len(image_list)---------- Change for full dataset len(image_list)\n",
+    "    for image_name in range(len(image_list)): # <------------------- Change for full dataset len(image_list)\n",
     "        i += 1\n",
     "        if i % 1000 == 0:\n",
     "            print(f\"Preprocessing image {i}/{len(image_list)}\")\n",
