--- a/model_training/priyansh_rushil.ipynb
+++ b/model_training/priyansh_rushil.ipynb
@@ -580,7 +580,91 @@
      "text": [
       "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m831s\u001b[0m 3s/step - accuracy: 0.7010 - auc: 0.7762 - loss: 0.5996 - val_accuracy: 0.5000 - val_auc: 0.4992 - val_loss: 16.6291 - learning_rate: 1.0000e-04\n",
       "Epoch 2/20\n",
-      "\u001b[1m229/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━\u001b[0m \u001b[1m3:06\u001b[0m 2s/step - accuracy: 0.7197 - auc: 0.7926 - loss: 0.5727"
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7190 - auc: 0.7924 - loss: 0.5727\n",
+      "Epoch 2: val_auc improved from 0.49922 to 0.53198, saving model to ../working/melanoma_model.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m743s\u001b[0m 2s/step - accuracy: 0.7190 - auc: 0.7924 - loss: 0.5726 - val_accuracy: 0.5605 - val_auc: 0.5320 - val_loss: 12.0084 - learning_rate: 1.0000e-04\n",
+      "Epoch 3/20\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7311 - auc: 0.8108 - loss: 0.5397\n",
+      "Epoch 3: val_auc improved from 0.53198 to 0.78073, saving model to ../working/melanoma_model.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m839s\u001b[0m 3s/step - accuracy: 0.7311 - auc: 0.8108 - loss: 0.5397 - val_accuracy: 0.7164 - val_auc: 0.7807 - val_loss: 0.8780 - learning_rate: 1.0000e-04\n",
+      "Epoch 4/20\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7411 - auc: 0.8278 - loss: 0.5133\n",
+      "Epoch 4: val_auc improved from 0.78073 to 0.79610, saving model to ../working/melanoma_model.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m742s\u001b[0m 2s/step - accuracy: 0.7411 - auc: 0.8278 - loss: 0.5133 - val_accuracy: 0.7074 - val_auc: 0.7961 - val_loss: 0.6164 - learning_rate: 1.0000e-04\n",
+      "Epoch 5/20\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.7609 - auc: 0.8416 - loss: 0.4922\n",
+      "Epoch 5: val_auc did not improve from 0.79610\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m922s\u001b[0m 3s/step - accuracy: 0.7609 - auc: 0.8416 - loss: 0.4922 - val_accuracy: 0.7219 - val_auc: 0.7913 - val_loss: 0.5833 - learning_rate: 1.0000e-04\n",
+      "Epoch 6/20\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.7818 - auc: 0.8660 - loss: 0.4515\n",
+      "Epoch 6: val_auc did not improve from 0.79610\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m993s\u001b[0m 3s/step - accuracy: 0.7818 - auc: 0.8660 - loss: 0.4515 - val_accuracy: 0.7086 - val_auc: 0.7902 - val_loss: 0.6340 - learning_rate: 1.0000e-04\n",
+      "Epoch 7/20\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4s/step - accuracy: 0.7966 - auc: 0.8852 - loss: 0.4206\n",
+      "Epoch 7: val_auc improved from 0.79610 to 0.79734, saving model to ../working/melanoma_model.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1268s\u001b[0m 4s/step - accuracy: 0.7966 - auc: 0.8853 - loss: 0.4205 - val_accuracy: 0.7145 - val_auc: 0.7973 - val_loss: 0.6342 - learning_rate: 1.0000e-04\n",
+      "Epoch 8/20\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.8064 - auc: 0.8962 - loss: 0.4021\n",
+      "Epoch 8: val_auc did not improve from 0.79734\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1060s\u001b[0m 3s/step - accuracy: 0.8064 - auc: 0.8962 - loss: 0.4021 - val_accuracy: 0.7074 - val_auc: 0.7789 - val_loss: 0.6616 - learning_rate: 1.0000e-04\n",
+      "Epoch 9/20\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4s/step - accuracy: 0.8284 - auc: 0.9158 - loss: 0.3639\n",
+      "Epoch 9: val_auc did not improve from 0.79734\n",
+      "\u001b[1m320/320\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1270s\u001b[0m 4s/step - accuracy: 0.8284 - auc: 0.9158 - loss: 0.3639 - val_accuracy: 0.6977 - val_auc: 0.7775 - val_loss: 0.6353 - learning_rate: 1.0000e-04\n",
+      "Epoch 10/20\n",
+      "\u001b[1m221/320\u001b[0m \u001b[32m━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━\u001b[0m \u001b[1m4:17\u001b[0m 3s/step - accuracy: 0.8519 - auc: 0.9294 - loss: 0.3350"
      ]
     }
    ],
@@ -842,68 +926,6 @@
     "with open('../working/model_results.json', 'w') as f:\n",
     "    json.dump(results, f)\n",
     "print(\"Results saved to ../working/model_results.json\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dafaaf37",
-   "metadata": {},
-   "source": [
-    "## 5. Transfer Learning (Optional)\n",
-    "\n",
-    "If needed, we can also implement a transfer learning approach using a pretrained model like MobileNetV2."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68ceea8c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nfrom tensorflow.keras.applications import MobileNetV2\\nfrom tensorflow.keras.layers import Input, GlobalAveragePooling2D\\nfrom tensorflow.keras.models import Model\\n\\n# For grayscale images, we need to convert to RGB (3 channels) for pretrained models\\nX_train_rgb = np.repeat(X_train, 3, axis=3)\\nX_val_rgb = np.repeat(X_val, 3, axis=3)\\nX_test_rgb = np.repeat(X_test, 3, axis=3)\\n\\n# Build model with MobileNetV2 base\\nbase_model = MobileNetV2(input_shape=(224, 224, 3), include_top=False, weights=\"imagenet\")\\nbase_model.trainable = False  # Freeze base model layers\\n\\ninputs = Input(shape=(224, 224, 3))\\nx = base_model(inputs)\\nx = GlobalAveragePooling2D()(x)\\nx = Dense(256, activation=\"relu\")(x)\\nx = BatchNormalization()(x)\\nx = Dropout(0.5)(x)\\noutputs = Dense(1, activation=\"sigmoid\")(x)\\n\\ntransfer_model = Model(inputs, outputs)\\ntransfer_model.compile(\\n    optimizer=Adam(learning_rate=0.0001),\\n    loss=\"binary_crossentropy\",\\n    metrics=[\"accuracy\", tf.keras.metrics.AUC(name=\"auc\")]\\n)\\n\\ntransfer_model.summary()\\n'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Load pretrained model (commented out as optional)\n",
-    "'''\n",
-    "from tensorflow.keras.applications import MobileNetV2\n",
-    "from tensorflow.keras.layers import Input, GlobalAveragePooling2D\n",
-    "from tensorflow.keras.models import Model\n",
-    "\n",
-    "# For grayscale images, we need to convert to RGB (3 channels) for pretrained models\n",
-    "X_train_rgb = np.repeat(X_train, 3, axis=3)\n",
-    "X_val_rgb = np.repeat(X_val, 3, axis=3)\n",
-    "X_test_rgb = np.repeat(X_test, 3, axis=3)\n",
-    "\n",
-    "# Build model with MobileNetV2 base\n",
-    "base_model = MobileNetV2(input_shape=(224, 224, 3), include_top=False, weights=\"imagenet\")\n",
-    "base_model.trainable = False  # Freeze base model layers\n",
-    "\n",
-    "inputs = Input(shape=(224, 224, 3))\n",
-    "x = base_model(inputs)\n",
-    "x = GlobalAveragePooling2D()(x)\n",
-    "x = Dense(256, activation=\"relu\")(x)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Dropout(0.5)(x)\n",
-    "outputs = Dense(1, activation=\"sigmoid\")(x)\n",
-    "\n",
-    "transfer_model = Model(inputs, outputs)\n",
-    "transfer_model.compile(\n",
-    "    optimizer=Adam(learning_rate=0.0001),\n",
-    "    loss=\"binary_crossentropy\",\n",
-    "    metrics=[\"accuracy\", tf.keras.metrics.AUC(name=\"auc\")]\n",
-    ")\n",
-    "\n",
-    "transfer_model.summary()\n",
-    "'''"
    ]
   }
  ],
