--- a/model_final/priyansh_rushil.ipynb
+++ b/model_final/priyansh_rushil.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "f0f05b3e",
    "metadata": {},
    "outputs": [
@@ -644,6 +644,45 @@
      "output_type": "stream",
      "text": [
       "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.3150\n",
+      "Confusion Matrix:\n",
+      "[[3163 3748]\n",
+      " [1016  311]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.76      0.46      0.57      6911\n",
+      "         1.0       0.08      0.23      0.12      1327\n",
+      "\n",
+      "    accuracy                           0.42      8238\n",
+      "   macro avg       0.42      0.35      0.34      8238\n",
+      "weighted avg       0.65      0.42      0.50      8238\n",
+      "\n",
+      "Evaluating melanoma_cnn_final_8.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m probs, preds = [], []\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m fp \u001b[38;5;129;01min\u001b[39;00m gt_df[\u001b[33m'\u001b[39m\u001b[33mfilepath\u001b[39m\u001b[33m'\u001b[39m]:\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m     img = \u001b[43mprocess_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfp\u001b[49m\u001b[43m)\u001b[49m[\u001b[32m1\u001b[39m]\n\u001b[32m     11\u001b[39m     img = cv2.resize(img, (\u001b[32m224\u001b[39m, \u001b[32m224\u001b[39m))\n\u001b[32m     12\u001b[39m     img = img.astype(np.float32) / \u001b[32m255.0\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mprocess_image\u001b[39m\u001b[34m(image_path)\u001b[39m\n\u001b[32m     16\u001b[39m bhg2 = cv2.GaussianBlur(blackhat2, (\u001b[32m3\u001b[39m,\u001b[32m3\u001b[39m), cv2.BORDER_DEFAULT)\n\u001b[32m     17\u001b[39m _, mask2 = cv2.threshold(bhg2, \u001b[32m10\u001b[39m, \u001b[32m255\u001b[39m, cv2.THRESH_BINARY)\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m dst2 = \u001b[43mcv2\u001b[49m\u001b[43m.\u001b[49m\u001b[43minpaint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdst\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[43m.\u001b[49m\u001b[43mINPAINT_TELEA\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m grayScale3 = cv2.cvtColor(dst2, cv2.COLOR_RGB2GRAY)\n\u001b[32m     20\u001b[39m kernel3 = cv2.getStructuringElement(cv2.MORPH_RECT, (\u001b[32m9\u001b[39m,\u001b[32m9\u001b[39m))  \u001b[38;5;66;03m# Square kernel\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
