--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b9166ca5",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1f76431b",
    "metadata": {},
    "outputs": [],
@@ -120,23 +120,22 @@
     "    \n",
     "    return np.array(images), np.array(all_labels)\n",
     "\n",
-    "def augment_data():\n",
-    "    # who would have thought: https://keras.io/api/layers/preprocessing_layers/image_augmentation/\n",
-    "    return tf.keras.Sequential([\n",
-    "        layers.RandomRotation(0.2),\n",
-    "        layers.RandomFlip(\"horizontal\"),\n",
-    "        layers.RandomFlip(\"vertical\"),\n",
-    "        layers.RandomZoom(0.2),\n",
-    "        layers.RandomBrightness(0.2),\n",
-    "        layers.RandomContrast(0.2),\n",
-    "    ])\n",
+    "# def augment_data():\n",
+    "#     # who would have thought: https://keras.io/api/layers/preprocessing_layers/image_augmentation/\n",
+    "#     return tf.keras.Sequential([\n",
+    "#         layers.RandomRotation(0.2),\n",
+    "#         layers.RandomFlip(\"horizontal\"),\n",
+    "#         layers.RandomFlip(\"vertical\"),\n",
+    "#         layers.RandomZoom(0.2),\n",
+    "#         layers.RandomBrightness(0.2),\n",
+    "#         layers.RandomContrast(0.2),\n",
+    "#     ])\n",
     "\n",
-    "# old model 81%\n",
+    "# current model 96% \n",
     "def build_model():\n",
     "\n",
     "    # random bs\n",
     "    model = models.Sequential([\n",
-    "        \n",
     "       layers.Conv2D(32, (3, 3), activation='relu',\n",
     "               padding='same', input_shape=(224, 224, 3)),\n",
     "        layers.BatchNormalization(),\n",
@@ -144,26 +143,22 @@
     "        layers.BatchNormalization(),\n",
     "        layers.MaxPooling2D((2, 2)),\n",
     "        layers.Dropout(0.25),\n",
-    "\n",
     "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.MaxPooling2D((2, 2)),\n",
     "        layers.Dropout(0.25),\n",
-    "\n",
     "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.MaxPooling2D((2, 2)),\n",
     "        layers.Dropout(0.25),\n",
-    "\n",
     "        layers.Flatten(),\n",
     "        layers.Dense(256, activation='relu'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.Dropout(0.5),\n",
-    "        \n",
     "        # sigmoid here\n",
     "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
