saving the model

--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -364,7 +364,9 @@
    "id": "7df84d9c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save(\"combo_melanoma_model.keras\")"
+   ]
   }
  ],
  "metadata": {
