--- a/model_training/old_model.ipynb
+++ b/model_training/old_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c9a9e6e4",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4dbfdb8c",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a55299ad",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d2f29db5",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "500e6090",
    "metadata": {},
    "outputs": [
@@ -213,32 +213,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating output directory\n",
-      "Preprocessing image 1000/25331\n",
-      "Preprocessing image 2000/25331\n",
-      "Preprocessing image 3000/25331\n",
-      "Preprocessing image 4000/25331\n",
-      "Preprocessing image 5000/25331\n",
-      "Preprocessing image 6000/25331\n",
-      "Preprocessing image 7000/25331\n",
-      "Preprocessing image 8000/25331\n",
-      "Preprocessing image 9000/25331\n",
-      "Preprocessing image 10000/25331\n",
-      "Preprocessing image 11000/25331\n",
-      "Preprocessing image 12000/25331\n",
-      "Preprocessing image 13000/25331\n",
-      "Preprocessing image 14000/25331\n",
-      "Preprocessing image 15000/25331\n",
-      "Preprocessing image 16000/25331\n",
-      "Preprocessing image 17000/25331\n",
-      "Preprocessing image 18000/25331\n",
-      "Preprocessing image 19000/25331\n",
-      "Preprocessing image 20000/25331\n",
-      "Preprocessing image 21000/25331\n",
-      "Preprocessing image 22000/25331\n",
-      "Preprocessing image 23000/25331\n",
-      "Preprocessing image 24000/25331\n",
-      "Preprocessing image 25000/25331\n"
+      "Output directory already exists, deleting\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 40\u001b[0m\n\u001b[0;32m     37\u001b[0m         output_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(output_dir, image_name)\n\u001b[0;32m     38\u001b[0m         cv2\u001b[38;5;241m.\u001b[39mimwrite(output_path, preprocessed_image)\n\u001b[1;32m---> 40\u001b[0m \u001b[43mpreprocess_all_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtraining_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../old_preprocessed_images\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[10], line 36\u001b[0m, in \u001b[0;36mpreprocess_all_images\u001b[1;34m(image_list, output_dir)\u001b[0m\n\u001b[0;32m     34\u001b[0m image_name \u001b[38;5;241m=\u001b[39m image_list[image_name]\n\u001b[0;32m     35\u001b[0m image_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(training_path, image_name)\n\u001b[1;32m---> 36\u001b[0m preprocessed_image \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocessing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m output_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(output_dir, image_name)\n\u001b[0;32m     38\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimwrite(output_path, preprocessed_image)\n",
+      "Cell \u001b[1;32mIn[10], line 7\u001b[0m, in \u001b[0;36mpreprocessing\u001b[1;34m(image)\u001b[0m\n\u001b[0;32m      5\u001b[0m image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(image, cv2\u001b[38;5;241m.\u001b[39mCOLOR_BGR2RGB)\n\u001b[0;32m      6\u001b[0m gray \u001b[38;5;241m=\u001b[39m convert_to_grayscale(image)\n\u001b[1;32m----> 7\u001b[0m hair_remove \u001b[38;5;241m=\u001b[39m \u001b[43mremove_hair\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgray\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m noise_reduced \u001b[38;5;241m=\u001b[39m reduce_noise(hair_remove)\n\u001b[0;32m     10\u001b[0m contrast \u001b[38;5;241m=\u001b[39m enhance_contrast(noise_reduced)\n",
+      "Cell \u001b[1;32mIn[9], line 12\u001b[0m, in \u001b[0;36mremove_hair\u001b[1;34m(img)\u001b[0m\n\u001b[0;32m     10\u001b[0m ret,mask \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mthreshold(bhg,\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m255\u001b[39m,cv2\u001b[38;5;241m.\u001b[39mTHRESH_BINARY)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m#Replace pixels of the mask\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m dst \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minpaint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmask\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mINPAINT_TELEA\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# plt.imshow(dst)\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# plt.show\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m dst\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -620,7 +609,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.10"
   }
  },
