pushed all changes

--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -163,7 +163,39 @@
     "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
     "    \n",
-    "    return model"
+    "    return model\n",
+    "\n",
+    "# Han if your gpu makes the model train fast, I am curious about this\n",
+    "'''\n",
+    "def build_model():\n",
+    "\n",
+    "    \n",
+    "    model = models.Sequential([\n",
+    "\n",
+    "        layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "               padding='same', input_shape=(224, 224, 3)),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.BatchNormalization(),\n",
+    "\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "\n",
+    "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        layers.Flatten(),\n",
+    "\n",
+    "        layers.Dense(512, activation='relu'),\n",
+    "        layers.BatchNormalization(),\n",
+    "        layers.Dropout(0.5),\n",
+    "\n",
+    "        # sigmoid here\n",
+    "        layers.Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    \n",
+    "    return model\n",
+    "'''"
    ]
   },
   {
@@ -365,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"combo_melanoma_model.keras\")"
+    "model.save(\"../combo_melanoma_model.keras\")"
    ]
   }
  ],
