cleaning things up

--- a/model_training/model_testing.ipynb
+++ b/model_training/model_testing.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "420fcc61",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
     "    plt.show()\n",
     "\n",
     "    \n",
-    "    print(f\"\\nResults for {name}:\")\n",
+    "    print(f\"Results for {name}:\")\n",
     "    auc_score = roc_auc_score(y_test, y_predictions)\n",
     "    f1 = f1_score(y_test, y_pred)\n",
     "    avg_precision = average_precision_score(y_test, y_predictions)\n",
