--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -120,17 +120,6 @@
     "    \n",
     "    return np.array(images), np.array(all_labels)\n",
     "\n",
-    "# def augment_data():\n",
-    "#     # who would have thought: https://keras.io/api/layers/preprocessing_layers/image_augmentation/\n",
-    "#     return tf.keras.Sequential([\n",
-    "#         layers.RandomRotation(0.2),\n",
-    "#         layers.RandomFlip(\"horizontal\"),\n",
-    "#         layers.RandomFlip(\"vertical\"),\n",
-    "#         layers.RandomZoom(0.2),\n",
-    "#         layers.RandomBrightness(0.2),\n",
-    "#         layers.RandomContrast(0.2),\n",
-    "#     ])\n",
-    "\n",
     "# current model 96% \n",
     "def build_model():\n",
     "\n",
@@ -165,7 +154,7 @@
     "    \n",
     "    return model\n",
     "\n",
-    "# Han if your gpu makes the model train fast, I am curious about this\n",
+    "# Han if your gpu makes the model train fast, I am curious about this (if it doesn't don't worry about it)\n",
     "'''\n",
     "def build_model():\n",
     "\n",
@@ -397,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"../combo_melanoma_model.keras\")"
+    "model.save(\"../melanoma_combo_model.keras\")"
    ]
   }
  ],
