--- a/model_training/old_model.ipynb
+++ b/model_training/old_model.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f3de9256",
    "metadata": {},
    "outputs": [],
@@ -373,18 +373,9 @@
     "    \n",
     "    return np.array(images), np.array(all_labels)\n",
     "\n",
-    "def augment_data():\n",
-    "    # who would have thought: https://keras.io/api/layers/preprocessing_layers/image_augmentation/\n",
-    "    return tf.keras.Sequential([\n",
-    "        layers.RandomRotation(0.2),\n",
-    "        layers.RandomFlip(\"horizontal\"),\n",
-    "        layers.RandomFlip(\"vertical\"),\n",
-    "        layers.RandomZoom(0.2),\n",
-    "        layers.RandomBrightness(0.2),\n",
-    "        layers.RandomContrast(0.2),\n",
-    "    ])\n",
     "\n",
-    "# old model 81%\n",
+    "\n",
+    "# old model 81%; new model 95% - terrible loss\n",
     "def build_model():\n",
     "\n",
     "    # random bs\n",
@@ -423,43 +414,7 @@
     "    \n",
     "    return model\n",
     "\n",
-    "def oversample_model():\n",
-    "    model = models.Sequential([\n",
-    "        \n",
-    "        augment_data(),\n",
-    "        \n",
-    "        layers.Conv2D(32, (3, 3), activation='relu',\n",
-    "               padding='same', input_shape=(224, 224, 1)),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.Conv2D(32, (3, 3), activation='relu', padding='same'),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.MaxPooling2D((2, 2)),\n",
-    "        layers.Dropout(0.25),\n",
-    "\n",
-    "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.Conv2D(64, (3, 3), activation='relu', padding='same'),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.MaxPooling2D((2, 2)),\n",
-    "        layers.Dropout(0.25),\n",
-    "\n",
-    "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.Conv2D(128, (3, 3), activation='relu', padding='same'),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.MaxPooling2D((2, 2)),\n",
-    "        layers.Dropout(0.25),\n",
-    "\n",
-    "        layers.Flatten(),\n",
-    "        layers.Dense(256, activation='relu'),\n",
-    "        layers.BatchNormalization(),\n",
-    "        layers.Dropout(0.5),\n",
-    "        \n",
-    "        # sigmoid here\n",
-    "        layers.Dense(1, activation='sigmoid')\n",
-    "    ])\n",
-    "    \n",
-    "    return model\n"
+    "\n"
    ]
   },
   {
